--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .category-bg-desserts {
-  background-image: url('https://images.unsplash.com/photo-1505253210343-0a0a0a0a0a0a?auto=format&fit=crop&w=400&q=80');
+  background-image: url('download.jpeg');
   background-size: cover;
   background-position: center;
   position: relative;
